--- a/Prototypen/Prototype/android/AndroidManifest.xml
+++ b/Prototypen/Prototype/android/AndroidManifest.xml
@@ -5,6 +5,10 @@
     android:versionName="0.0.1" >
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="22" />
+    
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
