--- a/Prototypen/Prototype/build.gradle
+++ b/Prototypen/Prototype/build.gradle
@@ -19,7 +19,7 @@ allprojects {
         appName = 'kpmi-prototyp'
         gdxVersion = '1.5.6'
         roboVMVersion = '1.0.0'
-        box2DLightsVersion = '1.3'
+        box2DLightsVersion = '1.4'
         ashleyVersion = '1.4.0'
         aiVersion = '1.5.0'
     }
@@ -62,6 +62,7 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+        compile "com.badlogicgames.ashley:ashley:1.6.0"
     }
 }
 
@@ -79,6 +80,7 @@ project(":html") {
         compile "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion:sources"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion:sources"
+        compile "com.badlogicgames.ashley:ashley:1.6.0"
     }
 }
 
@@ -91,7 +93,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-
+        compile "com.badlogicgames.ashley:ashley:1.6.0"
         compile "com.esotericsoftware:kryonet:2.22.0-RC1"
     }
 }
