--- a/Prototypen/Prototype/build.gradle
+++ b/Prototypen/Prototype/build.gradle
@@ -47,6 +47,8 @@ project(":desktop") {
 
 project(":android") {
     apply plugin: "android"
+	sourceCompatibility = 1.6
+	targetCompatibility = 1.6
 
     configurations { natives }
 
@@ -63,6 +65,8 @@ project(":android") {
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         compile "com.badlogicgames.ashley:ashley:1.6.0"
+		
+		compile fileTree(dir: '../core/libs', include: '*.jar')
     }
 }
 
@@ -94,7 +98,7 @@ project(":core") {
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         compile "com.badlogicgames.ashley:ashley:1.6.0"
-        compile "com.esotericsoftware:kryonet:2.22.0-RC1"
+		compile fileTree(dir: 'libs', include: '*.jar')
     }
 }
 
