--- a/Artwork/TexturePacker.config
+++ b/Artwork/TexturePacker.config
@@ -1,7 +1,39 @@
 name=weapons
 filename=
-input=Weapons
-output=Weapons
+input=../../../../../../../media/georg/data/Software/Entwicklung/Java/libGDX/MAZE-kpmi/Artwork/Weapons
+output=../../../../../../../media/georg/data/Software/Entwicklung/Java/libGDX/MAZE-kpmi/Artwork/Weapons
+
+alias=true
+alphaThreshold=0
+debug=false
+duplicatePadding=true
+edgePadding=true
+fast=false
+filterMag=Nearest
+filterMin=Nearest
+format=RGBA8888
+ignoreBlankImages=true
+jpegQuality=1.0
+maxHeight=1024
+maxWidth=1024
+minHeight=16
+minWidth=16
+outputFormat=png
+paddingX=2
+paddingY=2
+pot=true
+rotation=false
+stripWhitespaceX=false
+stripWhitespaceY=false
+wrapX=ClampToEdge
+wrapY=ClampToEdge
+
+---
+
+name=ingame_UI
+filename=
+input=ingame_overlay
+output=ingame_overlay
 
 alias=true
 alphaThreshold=0
