--- a/Prototypen/Prototype/build.gradle
+++ b/Prototypen/Prototype/build.gradle
@@ -94,10 +94,14 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+		compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+		compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         compile "com.badlogicgames.ashley:ashley:1.6.0"
+		compile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+		compile "org.mockito:mockito-all:1.9.5"
 		compile fileTree(dir: 'libs', include: '*.jar')
     }
 }
